# PPOIS

./: .coverage
lab 1/fifteen/: __init__.py  board.py
lab 1/markov/: __init__.py  main.py  rule.py  run_tests.py  test_rule.py
lab 1/tests/: test_board.py  ui.py
lab2/pharma_company/: README.md  __init__.py  exceptions.py  main.py
lab2/pharma_company/audit/: audit_report.py  training.py
lab2/pharma_company/catalog/: drug_catalog.py
lab2/pharma_company/core/: client.py  company.py  drug.py  employee.py
lab2/pharma_company/documents/: docflow.py  equipment.py  material.py  recipe.py
lab2/pharma_company/finance/: accounts.py  cards.py  payments.py
lab2/pharma_company/logistics/: batch.py  incident.py  route.py  warehouse.py
lab2/pharma_company/planning/: budget.py  reporting.py  risk.py  sales_plan.py
lab2/pharma_company/rules/: antifraud.py  dispensing.py
lab2/pharma_company/services/: client_service.py  misc.py  quality.py  supply.py
lab2/pharma_company/systems/: accounting.py  crm.py  hr.py  pos.py
lab2/pharma_company/tests/: test_audit.py  test_budget_extra.py  test_catalog.py  test_core.py  test_documents.py  test_finance.py  test_logistics.py  test_planning.py  test_rules.py  test_services.py  test_systems.py  test_utils.py
lab2/pharma_company/utils/: confidentiality.py  loyalty.py  misc_utils.py
Расчётная работа ППОИС Белковская,Ковалевская,Кастюкевич  421703/: CMakeLists.txt  find_bridges_agent.cpp  find_bridges_agent.hpp  network.scs  network_agent_tests.cpp  network_keynodes.hpp  network_module.cpp  network_module.hpp  Отчет РР.docx
(+14 files in other folders)
